Defaults update and README update

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,21 @@
 ---
 # defaults file for kevensen.oc-project-migrator
+# The Kubernetes Services to Migrate
 services_to_migrate: []
+# The Container Routes to Migrate
 routes_to_migrate: []
+# The Image Streams to Migrate
 image_streams_to_migrate: []
+# The Kubernetes Secrets to Migrate
 secrets_to_migrate: []
+# The Kubernetes Service Accounts to Migrate
 service_accounts_to_migrate: []
+# The Deployment Configurations to Migrate
+deployments_to_migrate: []
+# Add a string to the end of the project
+# name. This is essential if you are migrating
+# to the same cluster.
 project_name_postpend: ''
+# The default project role for the user
+#migrating the project
 project_role: 'view'
