--- a/tasks/service-accounts.yml
+++ b/tasks/service-accounts.yml
@@ -27,6 +27,8 @@
       namespace: "{{ project_name }}"
       fieldSelector: "type=kubernetes.io/dockercfg"
     register: tokens
+    delegate_to: "{{ from_host }}"
+    delegate_facts: True
 
   - name: Migrate Service Account Docker Configs
     oc:
@@ -35,13 +37,29 @@
         kind: Secret
         apiVersion: "{{ tokens.ansible_facts.oc.result.apiVersion }}"
         metadata:
-          name: "{{ item['metadata']['name'] }}-{{ project_name }}"
+          name: "{{ item['metadata']['name'] }}-{{ from_host | replace('.','-') }}"
           namespace: "{{ dest_project_name }}"
           annotations:
             kubernetes.io/service-account.name: "{{ item['metadata']['annotations']['kubernetes.io/service-account.name'] }}"
-        data: "{{ item['data'] | base64decode | regex_replace }}"
+        data: "{{ item['data'] | dockercfg_change_server(registry_route_hostname, registry_cluster_ip, 5000)}}"
         type: "{{ item['type'] }}"
     with_items: "{{ tokens.ansible_facts.oc.result.item_list }}"
+
+  - name: Create Service Account for Pulling Images from Source Cluster
+    oc:
+      state: present
+      inline:
+        kind: ServiceAccount
+        apiVersion: "{{ tokens.ansible_facts.oc.result.apiVersion }}"
+        metadata:
+          namespace: "{{ dest_project_name }}"
+          name: "{{ item['metadata']['annotations']['kubernetes.io/service-account.name'] }}"
+        imagePullSecrets:
+        - name: "{{ item['metadata']['name'] }}-{{ from_host | replace('.','-') }}"
+        secrets:
+        - name: "{{ item['metadata']['name'] }}-{{ from_host | replace('.','-') }}"
+    with_items: "{{ tokens.ansible_facts.oc.result.item_list }}"
+
   when: inventory_hostname != from_host
 
 - name: Ensure service account has image-puller role from project "{{ dest_project_name }} to {{ project_name }}"
@@ -57,3 +75,4 @@
       groupNames:
       - "system:serviceaccounts:{{ project_name }}"
       - "system:serviceaccounts:{{ dest_project_name }}"
+  when: inventory_hostname == from_host
