--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -21,7 +21,7 @@
         name: "{{ item.1 }}"
   with_subelements:
   - "{{ role_bindings.results }}"
-  - ansible_facts.oc.result.userNames
+  - ansible_facts.oc.result.userNames | remove_system_users
 
 - pause:
     seconds: 15
