--- a/tasks/secrets.yml
+++ b/tasks/secrets.yml
@@ -6,6 +6,7 @@
     kind: Secret
     name: "{{ item }}"
     namespace: "{{ project_name }}"
+    validate_certs: "{{ validate_certs }}"
   register: secrets
   with_items: "{{ secrets_to_migrate }}"
   delegate_to: "{{ from_host }}"
@@ -16,4 +17,5 @@
     state: present
     namespace: "{{ dest_project_name }}"
     inline: "{{ item.ansible_facts.oc.result | uniqueify_resource }}"
+    validate_certs: "{{ validate_certs }}"
   with_items: "{{ secrets.results }}"
