--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
 
   license: license (GPLv3)
 
-  min_ansible_version: 2.3
+  min_ansible_version: 2.4
 
 
   platforms:
@@ -18,5 +18,4 @@ galaxy_info:
   - OCP
   - Kubernetes
 
-dependencies:
-- { role: "kevensen.oc" }
+dependencies: {}
