--- a/tasks/deployments.yml
+++ b/tasks/deployments.yml
@@ -10,6 +10,7 @@
   with_items: "{{ deployments_to_migrate }}"
   delegate_to: "{{ from_host }}"
   delegate_facts: True
+  validate_certs: "{{ validate_certs }}"
 
 
 - name: Migrate Deployments
@@ -32,5 +33,5 @@
         test: "{{ item.ansible_facts.oc.result.spec.test | default(false) }}"
         selector: "{{ item.ansible_facts.oc.result.spec.selector }}"
         template: "{{ item.ansible_facts.oc.result.spec.template | remove_image }}"
-
+      validate_certs: "{{ validate_certs }}"
   with_items: "{{ deployment_configs.results }}"
