--- a/tasks/service-accounts.yml
+++ b/tasks/service-accounts.yml
@@ -7,6 +7,7 @@
     kind: ServiceAccount
     name: "{{ item }}"
     namespace: "{{ project_name }}"
+    validate_certs: "{{ validate_certs }}"
   register: service_accounts
   with_items: "{{ service_accounts_to_migrate }}"
   delegate_to: "{{ from_host }}"
@@ -17,6 +18,7 @@
     state: present
     namespace: "{{ dest_project_name }}"
     inline: "{{ item.ansible_facts.oc.result | uniqueify_resource }}"
+    validate_certs: "{{ validate_certs }}"
   with_items: "{{ service_accounts.results }}"
 
 - block:
@@ -26,6 +28,7 @@
       kind: Secret
       namespace: "{{ project_name }}"
       fieldSelector: "type=kubernetes.io/dockercfg"
+      validate_certs: "{{ validate_certs }}"
     register: tokens
     delegate_to: "{{ from_host }}"
     delegate_facts: True
@@ -43,6 +46,7 @@
             kubernetes.io/service-account.name: "{{ item['metadata']['annotations']['kubernetes.io/service-account.name'] }}"
         data: "{{ item['data'] | dockercfg_change_server(registry_route_hostname, registry_cluster_ip, 5000)}}"
         type: "{{ item['type'] }}"
+      validate_certs: "{{ validate_certs }}"
     with_items: "{{ tokens.ansible_facts.oc.result.item_list }}"
 
   - name: Create Service Account for Pulling Images from Source Cluster
@@ -58,6 +62,7 @@
         - name: "{{ item['metadata']['name'] }}-{{ from_host | replace('.','-') }}"
         secrets:
         - name: "{{ item['metadata']['name'] }}-{{ from_host | replace('.','-') }}"
+      validate_certs: "{{ validate_certs }}"
     with_items: "{{ tokens.ansible_facts.oc.result.item_list }}"
 
   when: inventory_hostname != from_host
@@ -75,4 +80,5 @@
       groupNames:
       - "system:serviceaccounts:{{ project_name }}"
       - "system:serviceaccounts:{{ dest_project_name }}"
+    validate_certs: "{{ validate_certs }}"
   when: inventory_hostname == from_host
