--- a/tasks/services.yml
+++ b/tasks/services.yml
@@ -6,6 +6,7 @@
     kind: Service
     name: "{{ item }}"
     namespace: "{{ project_name }}"
+    validate_certs: "{{ validate_certs }}"
   register: services
   with_items: "{{ services_to_migrate }}"
   delegate_to: "{{ from_host }}"
@@ -16,6 +17,7 @@
     state: present
     namespace: "{{ dest_project_name }}"
     inline: "{{ item.ansible_facts.oc.result | uniqueify_resource }}"
+    validate_certs: "{{ validate_certs }}"
   with_items: "{{ services.results }}"
 
 - name: Get Docker Registry Service
@@ -24,6 +26,7 @@
     namespace: default
     name: "{{ default_registry_service_name }}"
     kind: Service
+    validate_certs: "{{ validate_certs }}"
   delegate_to: "{{ from_host }}"
   delegate_facts: True
   register: registry_service
