--- a/tasks/secrets.yml
+++ b/tasks/secrets.yml
@@ -1,21 +1,23 @@
 ---
-# tasks file for kevensen.oc-project-migrator
 - name: Get Secrets
-  oc:
-    state: present
-    kind: Secret
-    name: "{{ item }}"
-    namespace: "{{ project_name }}"
-    validate_certs: "{{ validate_certs }}"
-  register: secrets
+  set_fact:
+    secret: "{{ lookup('oc',
+                       'Secret',
+                       host=from_host,
+                       token=hostvars[from_host]['ansible_sa_token'],
+                       namespace=project_name,
+                       resource_name=item,
+                       validate_certs=validate_certs) }}"
   with_items: "{{ secrets_to_migrate }}"
-  delegate_to: "{{ from_host }}"
-  delegate_facts: True
+  register: secrets
+
 
 - name: Migrate Secrets
   oc:
     state: present
     namespace: "{{ dest_project_name }}"
-    inline: "{{ item.ansible_facts.oc.result | uniqueify_resource }}"
+    inline: "{{ item.ansible_facts.secret | uniqueify_resource }}"
     validate_certs: "{{ validate_certs }}"
+    token: "{{ ansible_sa_token }}"
+  no_log: true
   with_items: "{{ secrets.results }}"
