--- a/tasks/service-accounts.yml
+++ b/tasks/service-accounts.yml
@@ -1,44 +1,45 @@
 ---
-# tasks file for kevensen.oc-project-migrator
-
 - name: Get Service Accounts
-  oc:
-    state: present
-    kind: ServiceAccount
-    name: "{{ item }}"
-    namespace: "{{ project_name }}"
-    validate_certs: "{{ validate_certs }}"
-  register: service_accounts
+  set_fact:
+    service_account: "{{ lookup('oc',
+                                'ServiceAccount',
+                                host=from_host,
+                                token=hostvars[from_host]['ansible_sa_token'],
+                                namespace=project_name,
+                                resource_name=item,
+                                validate_certs=validate_certs) }}"
   with_items: "{{ service_accounts_to_migrate }}"
-  delegate_to: "{{ from_host }}"
-  delegate_facts: True
+  register: service_accounts
 
 - name: Migrate Service Accounts
   oc:
     state: present
     namespace: "{{ dest_project_name }}"
-    inline: "{{ item.ansible_facts.oc.result | uniqueify_resource }}"
+    inline: "{{ item.ansible_facts.service_account | uniqueify_resource }}"
     validate_certs: "{{ validate_certs }}"
+    token: "{{ ansible_sa_token }}"
   with_items: "{{ service_accounts.results }}"
 
 - block:
+
+
   - name: Get Service Account Docker Configs
-    oc:
-      state: present
-      kind: Secret
-      namespace: "{{ project_name }}"
-      fieldSelector: "type=kubernetes.io/dockercfg"
-      validate_certs: "{{ validate_certs }}"
+    set_fact:
+      service_account: "{{ lookup('oc',
+                                  'Secret',
+                                  host=from_host,
+                                  token=hostvars[from_host]['ansible_sa_token'],
+                                  namespace=project_name,
+                                  fieldSelector='type=kubernetes.io/dockercfg',
+                                  validate_certs=validate_certs) }}"
     register: tokens
-    delegate_to: "{{ from_host }}"
-    delegate_facts: True
 
   - name: Migrate Service Account Docker Configs
     oc:
       state: present
       inline:
         kind: Secret
-        apiVersion: "{{ tokens.ansible_facts.oc.result.apiVersion }}"
+        apiVersion: "{{ tokens.ansible_facts.service_account.apiVersion }}"
         metadata:
           name: "{{ item['metadata']['name'] }}-{{ from_host | replace('.','-') }}"
           namespace: "{{ dest_project_name }}"
@@ -47,14 +48,16 @@
         data: "{{ item['data'] | dockercfg_change_server(registry_route_hostname, registry_cluster_ip, 5000)}}"
         type: "{{ item['type'] }}"
       validate_certs: "{{ validate_certs }}"
-    with_items: "{{ tokens.ansible_facts.oc.result.item_list }}"
+      token: "{{ ansible_sa_token }}"
+    no_log: true
+    with_items: "{{ tokens.ansible_facts.service_account.item_list }}"
 
   - name: Create Service Account for Pulling Images from Source Cluster
     oc:
       state: present
       inline:
         kind: ServiceAccount
-        apiVersion: "{{ tokens.ansible_facts.oc.result.apiVersion }}"
+        apiVersion: "{{ tokens.ansible_facts.service_account.apiVersion }}"
         metadata:
           namespace: "{{ dest_project_name }}"
           name: "{{ item['metadata']['annotations']['kubernetes.io/service-account.name'] }}"
@@ -63,7 +66,9 @@
         secrets:
         - name: "{{ item['metadata']['name'] }}-{{ from_host | replace('.','-') }}"
       validate_certs: "{{ validate_certs }}"
-    with_items: "{{ tokens.ansible_facts.oc.result.item_list }}"
+      token: "{{ ansible_sa_token }}"
+    no_log: true
+    with_items: "{{ tokens.ansible_facts.service_account.item_list }}"
 
   when: inventory_hostname != from_host
 
@@ -80,5 +85,6 @@
       groupNames:
       - "system:serviceaccounts:{{ project_name }}"
       - "system:serviceaccounts:{{ dest_project_name }}"
+    token: "{{ ansible_sa_token }}"
     validate_certs: "{{ validate_certs }}"
   when: inventory_hostname == from_host
