--- a/tasks/project.yml
+++ b/tasks/project.yml
@@ -1,14 +1,12 @@
 ---
-# tasks file for kevensen.oc-project-migrator
 - name: Get Project {{ project_name }}
-  oc:
-    state: present
-    kind: Project
-    name: "{{ project_name }}"
-    validate_certs: "{{ validate_certs }}"
-  register: project
-  delegate_to: "{{ from_host }}"
-  delegate_facts: True
+  set_fact:
+    source_project:  "{{ lookup('oc',
+                                'Project',
+                                host=from_host,
+                                token=hostvars[from_host]['ansible_sa_token'],
+                                resource_name=project_name,
+                                validate_certs=validate_certs) }}"
 
 - name: Migrate Project {{ project_name }}
   oc:
@@ -16,9 +14,10 @@
     inline:
       kind: ProjectRequest
       metadata:
-        name: "{{ project.ansible_facts.oc.result.metadata.name }}{{ project_name_postpend }}"
+        name: "{{ source_project.metadata.name }}{{ project_name_postpend }}"
     validate_certs: "{{ validate_certs }}"
+    token: "{{ ansible_sa_token }}"
 
 - name: Set Project name
   set_fact:
-    dest_project_name: "{{ project.ansible_facts.oc.result.metadata.name }}{{ project_name_postpend }}"
+    dest_project_name: "{{ source_project.metadata.name }}{{ project_name_postpend }}"
